# verilization

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.toml  tsconfig.json
bindings/c-api/: Cargo.toml
bindings/c-api-core/: Cargo.toml
bindings/c-api-core/src/: lib.rs
bindings/c-api/src/: lib.rs
bindings/typescript/: package-lock.json  package.json  tsconfig.json
bindings/typescript/src/: cli.ts  compiler.ts  index.ts  index_node.ts  index_web.ts  verilization_compiler.wasm.d.ts
compiler/: Cargo.toml
compiler-cli/: Cargo.toml
compiler-cli-core/: Cargo.toml
compiler-cli-core/src/: help.txt  lib.rs
compiler-cli/src/: main.rs
compiler/src/: c_api.rs  cli_data.rs  file_output_handler.rs  lang.rs  lib.rs  main.rs  memory_output_handler.rs  model.rs  model_loader.rs  parser.rs  type_check.rs  util.rs  verror.rs
compiler/src/lang/: dummy_generator.rs  generator.rs  java.rs  mod.rs  scala.rs  typescript.rs
compiler/src/type_check/: tests.rs
compiler/tests/run_compiler/: main.rs  test_lang.rs  ts_test_gen.rs
docs/lang/: Java.md  Scala.md  TypeScript.md
lang/java/: Cargo.toml
lang/java/src/: lib.rs
lang/scala/: Cargo.toml
lang/scala/src/: lib.rs
lang/typescript/: Cargo.toml
lang/typescript/src/: lib.rs
runtime/java/: build.sbt
runtime/java/src/main/java/: module-info.java
runtime/rust/: Cargo.toml
runtime/rust/src/: lib.rs  vlq.rs
runtime/scala/: build.sbt
runtime/typescript/: i16.d.ts  i16.js  i32.d.ts  i32.js  i64.d.ts  i64.js  i8.d.ts  i8.js  int.d.ts  int.js  list.d.ts  list.js  nat.d.ts  nat.js  option.d.ts  option.js  package-lock.json  package.json  string.d.ts  string.js  tsconfig.json  u16.d.ts  u16.js  u32.d.ts  u32.js  u64.d.ts  u64.js  u8.d.ts  u8.js
runtime/typescript/src/: Codec.ts  Converter.ts  FormatIO.ts  I16.ts  I32.ts  I64.ts  I8.ts  Int.ts  List.ts  Nat.ts  Option.ts  RemoteConnection.ts  RemoteObject.ts  RemoteObjectId.ts  StandardCodecs.ts  String.ts  U16.ts  U32.ts  U64.ts  U8.ts  VLQ.ts  index.ts
runtime/verilization/: integral.verilization  list.verilization  option.verilization  string.verilization
tests/java/: build.sbt
tests/java/src/main/java/enum_/versions/: Main_Conversions.java  Referenced_Conversions.java
tests/java/src/main/java/finalTest/: Upgrade_Conversions.java
tests/java/src/main/java/genericsTest/: Either_Conversions.java  Pair_Conversions.java
tests/java/src/main/java/sertests/: MemoryFormatReader.java  MemoryFormatWriter.java
tests/java/src/main/java/struct/versions/: Main_Conversions.java  Referenced_Conversions.java
tests/java/src/test/java/sertests/: TestsBase.java
tests/runner/: Cargo.toml  package-lock.json  package.json
tests/runner/src/: LanguageHandler.ts  TypeScriptHandler.ts  java_test_gen.rs  lib.rs  main.rs  memory_format.rs  output_comparison.rs  runner.ts  scala_test_gen.rs  test_cases.rs  test_lang.rs  ts_test_gen.rs  value_generator.rs
tests/runner/tests/: command_line_interfaces.rs  generators.rs
tests/scala/: build.sbt
tests/scala/project/: scalajs.sbt
tests/scala/shared/src/main/scala/enum_/versions/: Referenced_Conversions.scala
tests/scala/shared/src/main/scala/finalTest/: Upgrade_Conversions.scala
tests/scala/shared/src/main/scala/genericsTest/: Either_Conversions.scala  Pair_Conversions.scala
tests/scala/shared/src/main/scala/sertests/: MemoryFormatReader.scala  MemoryFormatWriter.scala
tests/scala/shared/src/main/scala/struct/versions/: Main_Conversions.scala
tests/scala/shared/src/test/scala/sertests/: TestCase.scala  TestsBase.scala
tests/scala/src/main/scala/enum_/versions/: Main_Conversions.scala  Referenced_Conversions.scala
tests/scala/src/main/scala/genericsTest/: Either_Conversions.scala  Pair_Conversions.scala
tests/scala/src/main/scala/sertests/: MemoryFormatReader.scala  MemoryFormatWriter.scala
tests/scala/src/main/scala/struct/versions/: Main_Conversions.scala  Referenced_Conversions.scala
tests/scala/src/test/scala/sertests/: TestsBase.scala
tests/typescript/: package-lock.json  package.json
tests/typescript/src/: MemoryFormat.ts  check.ts
tests/verilization/: enum_versions.verilization  final.verilization  generics.verilization  interface_example.verilization  struct_versions.verilization
(+77 files in other folders)
