[package]
name = "verilization-compiler"
version = "0.1.0"
authors = ["argon-dev <argon@argon.dev>"]
edition = "2018"

[dependencies]
nom = "6.1.2"
rand = "0.8.3"
num-bigint = { version = "0.4.0", features = ["rand"] }
num-traits = "0.2.14"
pathdiff = "0.2.0"

[dev-dependencies]
random-string = "0.2.0"
rand_chacha = "0.3.0"
hex-literal = "0.3.1"
verilization-runtime = { path = "../runtime/rust" }

