[package]
name = "verilization-compiler"
version = "0.1.0"
authors = ["argon-dev <argon@argon.dev>"]
license = "GPL-3.0-only"
description = "The verilization serialization description language compiler. This contains the core compiler library, but not the languages or CLI."
hompage = "https://github.com/argon-lang/verilization"
repository = "https://github.com/argon-lang/verilization"
edition = "2018"

[dependencies]
nom = "6.1.2"
num-bigint = "0.4.0"
num-traits = "0.2.14"
pathdiff = "0.2.0"
lazy_static = "1.4.0"
