[package]
name = "verilization-bindings-c-api"
version = "0.1.0"
authors = ["argon-dev <argon@argon.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
verilization-compiler = { path = "../../compiler" }
verilization-bindings-c-api-core = { path = "../c-api-core" }
verilization-lang-java = { path = "../../lang/java" }
verilization-lang-scala = { path = "../../lang/scala" }
verilization-lang-typescript = { path = "../../lang/typescript" }
